--- a/app/static/sytle.css
+++ b/app/static/sytle.css
@@ -5,3 +5,11 @@ body {
 h1 {
     color: #343a40
 }
+
+.list-group-item {
+    transition: background 0.2s ease;
+}
+
+.list-group-item:hover {
+    background: #f8f9fa;
+}
